--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon src/server.ts"
+    "dev": "nodemon src/server.ts",
+    "test": "NODE_ENV=test jest --passWithNoTests --runInBand"
   },
   "keywords": [],
   "author": "",
@@ -13,6 +14,7 @@
     "@types/express": "^4.17.16",
     "@types/jest": "^29.4.0",
     "@types/node": "^18.11.18",
+    "@types/supertest": "^2.0.12",
     "jest": "^29.4.2",
     "nodemon": "^2.0.20",
     "prisma": "^4.9.0",
