--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@faker-js/faker": "^7.6.0",
     "@types/express": "^4.17.16",
     "@types/jest": "^29.4.0",
     "@types/node": "^18.11.18",
@@ -28,6 +29,7 @@
     "@prisma/client": "^4.9.0",
     "express": "^4.18.2",
     "express-async-errors": "^3.1.1",
+    "faker": "^6.6.6",
     "http-status": "^1.6.2",
     "joi": "^17.7.0"
   }
